<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_courses" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_today_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_flag_black_24dp"
        android:title="@string/title_goals" />

</menu>

